# geo-utils

./: .codacy.yaml  .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  NOTICE  README.md  buildfile  manifest
.github/workflows/: ci.yml  coverage.yml  install.yml  vcpkg.yml  xrepo.yml
benchmarks/: CMakeLists.txt  README.md
benchmarks/common/: random_data.hpp
benchmarks/size/: consumer_boost.cpp  consumer_geo_utils.cpp  consumer_geographiclib.cpp  consumer_naive.cpp  consumer_s2.cpp  measure.sh
benchmarks/speed/: bench_boost.cpp  bench_geo_utils.cpp  bench_geographiclib.cpp  bench_naive.cpp  bench_s2.cpp
cmake/: CppGeometryLibraryConfig.cmake.in  GeoUtilsConfig.cmake.in  GeoUtilsCppConfig.cmake.in  geo-utils-cpp.pc.in  geo-utils.pc.in
docs/: api.md  benchmarks.md  getting-started.md
examples/: CMakeLists.txt  poly.cpp  poly_util.cpp  spherical.cpp  spherical_util.cpp
include/: CppGeometryLibrary.hpp  LatLng.hpp  MathUtil.hpp  PolyUtil.hpp  SphericalUtil.hpp  buildfile
include/CppGeometryLibrary/: LatLng.hpp  MathUtil.hpp  PolyUtil.hpp  SphericalUtil.hpp
include/geo/: buildfile  geo.hpp  latlng.hpp  poly.hpp  spherical.hpp
include/geo/detail/: math.hpp
tests/: TestHelpers.hpp  Tests.cpp  test_helpers.hpp  tests.cpp
tests/LatLng/: operator_equal.hpp
tests/MathUtil/: mod.hpp
tests/PolyUtil/: containsLocation.hpp  distanceToLine.hpp  isLocationOnEdge.hpp  isLocationOnPath.hpp
tests/SphericalUtil/: computeAngleBetween.hpp  computeArea.hpp  computeDistanceBetween.hpp  computeHeading.hpp  computeLength.hpp  computeOffset.hpp  computeOffsetOrigin.hpp  computeSignedArea.hpp  interpolate.hpp
tests/consumer/: CMakeLists.txt  main.cpp  xmake.lua
tests/latlng/: operator_equal.hpp
tests/math/: mod.hpp
tests/poly/: contains.hpp  distance_to_segment.hpp  on_edge.hpp  on_path.hpp
tests/spherical/: angle_between.hpp  area.hpp  distance_between.hpp  heading.hpp  interpolate.hpp  offset.hpp  offset_origin.hpp  path_length.hpp  signed_area.hpp
